--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,10 +2,11 @@ version: '3.8'
 
 services:
   web:
-    build: Backend
     container_name: school_canteen
+    build: .
     ports:
       - "5000:5000"
     volumes:
+
       - ./database:/app/database
     restart: unless-stopped
